--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -2,6 +2,7 @@
   --blue-dark: #0f2b4d;
   --blue-background: #0e2b68;
   --gray-dark: #3f3f3f;
+  --gray404040: #404040;
   --gray-beast: #666666;
   --gray-medium: #999999;
   --gray-light: #b2b2b2;
