--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -1,27 +1,31 @@
 <div class="background-video-container">
   <div id="background-video-player">
+    {% if page.videos.smooth %}
     <div class="__video --smooth" data-video-name="smooth">
       <div id="background-video-player-smooth"></div>
       <div class="__overlay --white-fade"></div>
     </div>
-
+    {% endif %} {% if page.videos.rough %}
     <div class="__video --rough" data-video-name="rough">
       <div id="background-video-player-rough"></div>
       <div class="__overlay --feathered-gray-blue"></div>
       <div class="__overlay --dark-blue"></div>
       <div class="__overlay --dark-blue-inv"></div>
     </div>
-
+    {% endif %} {% if page.videos.flowing %}
     <div class="__video --flowing" data-video-name="flowing">
       <div id="background-video-player-flowing"></div>
       <div class="__overlay --gray-blue"></div>
       <div class="__overlay --blue-blue"></div>
+      <div class="__overlay --dark-blue"></div>
+      <div class="__overlay --dark-blue-inv"></div>
     </div>
-
+    {% endif %} {% if page.videos.creek %}
     <div class="__video --creek" data-video-name="creek">
       <div id="background-video-player-creek"></div>
       <div class="__overlay --creek"></div>
     </div>
+    {% endif %}
   </div>
 
   <div class="__line-drawing svg-line-drawing">
