--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="__logo">
-    <a href="{{site.baseUrl}}/" title="River">{% include river_logo.svg %}</a>
+    <a href="{{ site.url }}" title="River">{% include river_logo.svg %}</a>
   </div>
   <div class="__links">
     <a href="javascript:void" title="Platform" class="__link l1">Platform</a>
@@ -10,13 +10,13 @@
   </div>
   <div class="__sign-up">
     <a
-      href="{{ site.baseUrl }}/riverbank"
+      href="{{ site.url }}/riverbank"
       title="Riverbank"
       class="__link l1 --gray-fill"
       >R</a
     >
     <a
-      href="{{ site.baseUrl }}/streams"
+      href="{{ site.url }}/streams"
       title="StreamS"
       class="__link l1 --gray-fill"
       >S</a
