Introduce better loading strategy + better SVGs

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -29,6 +29,6 @@
   </div>
 
   <div class="__line-drawing svg-line-drawing">
-    {% include nikki_line_drawing.svg %}
+    {% include scrib.svg %} {% include scrib1.svg %} {% include scrib2.svg %}
   </div>
 </div>
