--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -28,7 +28,5 @@
     {% endif %}
   </div>
 
-  <div class="__line-drawing svg-line-drawing">
-    {% include scrib.svg %} {% include scrib1.svg %} {% include scrib2.svg %}
-  </div>
+  {% include line_drawings.html %}
 </div>
