--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,13 +14,13 @@
     <a
       href="{{ site.baseurl }}{% link riverbank.html %}"
       title="Riverbank"
-      class="__link l1 --gray-fill"
+      class="__link l1 --gray-fill __page-link"
       >R</a
     >
     <a
       href="{{ site.baseurl }}{% link streams.html %}"
       title="StreamS"
-      class="__link l1 --gray-fill"
+      class="__link l1 --gray-fill __page-link"
       >S</a
     >
 
