Riverbank + StreamS looking good

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <a href="javascript:void" title="Services" class="__link l1">Services</a>
     <a href="javascript:void" title="About" class="__link l1">About</a>
   </div>
-  <div class="__sign-up">
+  <div class="__page-links">
     <a
       href="{{ site.baseurl }}{% link riverbank.html %}"
       title="Riverbank"
@@ -23,7 +23,8 @@
       class="__link l1 --gray-fill __page-link"
       >S</a
     >
-
+  </div>
+  <div class="__sign-up">
     <a href="javascript:void" title="Sign Up" class="__link button --sign-up"
       >Sign Up</a
     >
