--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html
+  data-section="{{ page.initialSection }}"
+  class="{% if page.animatedBackgroundColor %}--animated-bg{% endif %}"
+>
   <head>
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
