--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,38 @@
     >
   </div>
   <div class="__links">
-    <a href="javascript:void" title="Platform" class="__link l1">Platform</a>
-    <a href="javascript:void" title="Products" class="__link l1">Products</a>
-    <a href="javascript:void" title="Services" class="__link l1">Services</a>
-    <a href="javascript:void" title="About" class="__link l1">About</a>
+    <div class="__link-container">
+      <a href="javascript:void" title="Platform" class="__link l1">Platform</a>
+      <ul class="__sublinks">
+        <li><a class="l1" href="javascript:void">Data Exchange</li>
+        <li><a class="l1" href="javascript:void">Data Integrity</li>
+      </ul>
+    </div>
+
+    <div class="__link-container">
+      <a href="javascript:void" title="Products" class="__link l1">Products</a>
+      <ul class="__sublinks">
+        <li><a class="l1" href="javascript:void">Monetization</li>
+        <li><a class="l1" href="javascript:void">Discovery</li>
+      </ul>
+    </div>
+
+    <div class="__link-container">
+      <a href="javascript:void" title="Services" class="__link l1">Services</a>
+      <ul class="__sublinks">
+        <li><a class="l1" href="javascript:void">Compliance</li>
+        <li><a class="l1" href="javascript:void">App Development</li>
+      </ul>
+    </div>
+
+    <div class="__link-container">
+      <a href="javascript:void" title="About" class="__link l1">About</a>
+      <ul class="__sublinks">
+        <li><a class="l1" href="javascript:void">Press</li>
+        <li><a class="l1" href="javascript:void">Legal</li>
+        <li><a class="l1" href="javascript:void">Team</li>
+      </ul>
+    </div>
   </div>
   <div class="__page-links">
     <a
