--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
     <a href="{{ site.baseurl }}{% link index.html %}" title="River"
       >{% include river_logo.svg %}</a
     >
+    <div class="__shimmer"></div>
   </div>
   <div class="__links">
     <div class="__link-container">
