--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -94,6 +94,20 @@ body {
   margin-top: 8vh;
 }
 
+@keyframes shimmer {
+  0% {
+    transform: translate(6em, 0);
+  }
+
+  10% {
+    transform: translate(-6em, 0);
+  }
+
+  100% {
+    transform: translate(-6em, 0);
+  }
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -112,6 +126,7 @@ body {
   .__logo {
     flex-basis: 25%;
     flex-shrink: 2;
+    position: relative;
 
     a {
       display: block;
@@ -122,6 +137,26 @@ body {
       width: 3em;
       color: var(--logo-color);
       transition: color ease-in var(--transition-time);
+    }
+
+    .__shimmer {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 4em;
+      height: 4em;
+
+      background-image: linear-gradient(
+        70deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 18%,
+        rgba(255, 255, 255, 0.6) 22%,
+        rgba(255, 255, 255, 0.6) 40%,
+        rgba(255, 255, 255, 0) 42%,
+        rgba(255, 255, 255, 0) 100%
+      );
+
+      animation: shimmer 5s linear infinite;
     }
   }
 
@@ -552,6 +587,11 @@ html[data-section="home-privacy-platform"] {
 section.--home-privacy-platform {
   .__body {
     max-width: 48em;
+  }
+
+  .__typing-text-target {
+    display: flex;
+    flex-flow: row nowrap;
   }
 }
 
