More scribbles + alpha

--- a/_includes/line_drawings.html
+++ b/_includes/line_drawings.html
@@ -1,4 +1,8 @@
 <div class="__line-drawing svg-line-drawing">
+  <div class="__scrib2-4">{% include scrib2.svg %}</div>
+  <div class="__scrib2-5">{% include scrib2.svg %}</div>
+  <div class="__scrib2-6">{% include scrib2.svg %}</div>
+
   <div class="__scrib2-3">{% include scrib2.svg %}</div>
   <div class="__scrib2-2">{% include scrib2.svg %}</div>
   <div class="__scrib">{% include scrib.svg %}</div>
