Fix videos and swap "smooth" out for "flowing"

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -15,6 +15,7 @@
     {% endif %} {% if page.videos.flowing %}
     <div class="__video --flowing" data-video-name="flowing">
       <div id="background-video-player-flowing"></div>
+      <div class="__overlay --white-fade"></div>
       <div class="__overlay --gray-blue"></div>
       <div class="__overlay --blue-blue"></div>
       <div class="__overlay --dark-blue"></div>
